syntax = "proto3";

package manager.api.authorize;

option go_package = "manager/api/authorize;authorize";
option java_multiple_files = true;
option java_package = "manager.api.authorize";

import "validate/validate.proto";

message GetImageCaptchaRequest{
  string scene = 2;
}

message GetImageCaptchaReply{
  string uuid = 1;
  string captcha = 2;
  uint32 expire = 3;
}

message LoginRequest {
  string username = 1[(validate.rules).string = {min_len:4}];
  string password = 2[(validate.rules).string = {min_len:4}];
  string captchaId = 3[(validate.rules).string = {min_len:1}];
  string captcha = 4[(validate.rules).string = {min_len:1}];
  string tenant = 5[(validate.rules).string = {min_len:1}];
  string app = 6[(validate.rules).string = {min_len:1}];
}

message LoginReply {
  bool needInfo = 1;
  string token = 2;
}

message ListOAutherRequest {
  string app = 1[(validate.rules).string = {min_len: 1}];
  string tenant = 2[(validate.rules).string = {min_len: 1}];
}

message ListOAutherReply {
  message OAuther {
    uint32 id = 1;
    string logo = 2;
    string name = 3;
    string keyword = 4;
    string type = 5;
  }
  repeated OAuther list = 2;
}


message OAutherHandleRequest {
  string app = 1[(validate.rules).string = {min_len: 1}];
  string tenant = 2[(validate.rules).string = {min_len: 1}];
  string keyword = 3[(validate.rules).string = {min_len: 1}];
  string account = 4;
}

message OAutherHandleReply {
  string uuid = 1;
  string action = 2;
  string value = 3;
  string tip = 4;
  string keyword = 5;
  string codeField = 6;
}

message OAutherLoginRequest {
  string app = 1[(validate.rules).string = {min_len: 1}];
  string tenant = 2[(validate.rules).string = {min_len: 1}];
  string keyword = 3[(validate.rules).string = {min_len:1}];
  string uuid = 4[(validate.rules).string = {min_len:1}];
  string account = 5;
  string code = 6;

}

message OAutherLoginReply {
  bool needBind = 1;
  bool needInfo = 2;
  optional string token = 3;
}

message OAutherBindRequest {
  string username = 1[(validate.rules).string = {min_len:3}];
  string password = 2[(validate.rules).string = {min_len:6}];
  string captchaId = 3[(validate.rules).string = {min_len:1}];
  string captcha = 4[(validate.rules).string = {min_len:1}];
  string keyword = 5[(validate.rules).string = {min_len:1}];
  string uuid = 6[(validate.rules).string = {min_len:1}];
  bool register = 7;
}

message OAutherBindReply{
  bool needRegister = 1;
  bool needInfo = 2;
  string token = 3;
}


message RegisterRequest {
  string username = 1[(validate.rules).string = {min_len:4}];
  string password = 2[(validate.rules).string = {min_len:4}];
  string captchaId = 3[(validate.rules).string = {min_len:1}];
  string captcha = 4[(validate.rules).string = {min_len:1}];
  string tenant = 5[(validate.rules).string = {min_len:1}];
  string app = 6[(validate.rules).string = {min_len:1}];
}

message RegisterReply{
  bool needInfo = 1;
  string token = 2;
}

message CheckAuthRequest{
  string path = 1[(validate.rules).string = {min_len:1}];
  string method = 2[(validate.rules).string = {min_len:1}];
}

message CheckAuthReply{
  uint32  tenantId = 1;
  uint32  userId = 2;
  uint32  deptId = 3;
}

message ParseTokenRequest{
}

message ParseTokenReply{
  uint32 userId = 1;
  uint32 deptId = 2;
  uint32 tenantId = 3;
  string username = 4;
}